# PyGenStability

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: run-tox.yml
docs/: index_readme.md
src/pygenstability/: __init__.py  constructors.py  data_clustering.py  io.py  optimal_scales.py  plotting.py  pygenstability.py
src/pygenstability/contrib/: sankey.py
src/pygenstability/generalized_louvain/: generalized_louvain.cpp
tests/: test_pygenstability.py
tests/data/: test_run_times.yaml
